# jetson-ffmpeg

./: CMakeLists.txt  README.md
src/: nvmpi_dec.cpp
